# ferroforever

./: .env  README.md  ferro.txt  pyproject.toml
1-LangChainBasics/: langchainbasics.ipynb  langchainbasics2.py
Assistant/: Agent.py
